implemented concurrently to run both servers

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teach",
   "version": "1.0.0",
-  "description": "",
+  "description": "Project 3 ### Group Project 3",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
@@ -13,6 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
-  }
+    "concurrently": "^5.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/C4RMONA/git-gud-kid.git"
+  },
+  "bugs": {
+    "url": "https://github.com/C4RMONA/git-gud-kid/issues"
+  },
+  "homepage": "https://github.com/C4RMONA/git-gud-kid#readme"
 }
